# gitize

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  NGINX_SETUP.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  init-db.sql
backend/migrations/2025-09-19-040406_create_users/: down.sql  up.sql
backend/migrations/20250903150410_create_repositories/: up.sql
backend/migrations/20250903150411_create_summaries/: up.sql
backend/migrations/20250903150412_create_newsletter_subscriptions/: down.sql  up.sql
backend/migrations/20250903150413_create_trending_history/: down.sql  up.sql
backend/src/: database.rs  lib.rs  main.rs  middleware.rs  schema.rs  seed.rs
backend/src/models/: mod.rs  newsletter_subscription.rs  repository.rs  summary.rs  trending_history.rs  user.rs
backend/src/repositories/: mod.rs  newsletter_repo.rs  repository_repo.rs  summary_repo.rs  trending_history_repo.rs  user_repo.rs
backend/src/routes/: admin.rs  auth.rs  health.rs  mod.rs  newsletter.rs  newsletter_analytics.rs  referral.rs  repositories.rs
backend/src/services/: ab_testing.rs  alerting.rs  auth_service.rs  email_client.rs  github_scraper.rs  llm_client.rs  logging.rs  metrics.rs  mod.rs  newsletter_analytics.rs  newsletter_service.rs  newsletter_template.rs  personalization_engine.rs  referral_service.rs  repository_service.rs  scheduler.rs  service_manager.rs  summary_service.rs
backend/src/services/tests/: ab_testing_tests.rs  mod.rs  newsletter_analytics_tests.rs  (+1 more)
backend/tests/: api_performance_test.rs  end_to_end_test.rs  integration_test.rs  newsletter_integration_test.rs  referral_integration_test.rs
backend/tests/common/: mod.rs
frontend/: Dockerfile  (+14 more)
(+195 files in other folders)
