[package]
name = "github-trending-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
r2d2 = "0.8"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
async-openai = "0.20"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
dotenv = "0.15"
